tests/grammar/snapshots/r#mod__grammar__alpha034__text-9.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(r#\"\"\\\"#)"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Text(
                                    [],
                                ),
                                0..2,
                            ),
                        ),
                        0..2,
                    ),
                ),
                0..2,
            ),
        ],
    ),
    [
        Simple {
            span: 1..2,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "\"",
                    ),
                ),
            },
            found: Some(
                Token(
                    "\\",
                ),
            ),
            label: None,
        },
    ],
)
