tests/grammar/snapshots/r#mod__grammar__alpha034__text.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"\\\"Hello, world!\\\"\").unwrap()"
---
Statement(
    [
        Expression(
            Text(
                [
                    Text(
                        "Hello, world!",
                    ),
                ],
            ),
        ),
    ],
)
