tests/grammar/snapshots/r#mod__grammar__alpha034__var_init-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"let a = 10 + 2 * 3\").unwrap()"
---
[
    (
        Statement(
            (
                VariableInit(
                    (
                        "a",
                        4..5,
                    ),
                    (
                        Add(
                            (
                                Number(
                                    (
                                        10.0,
                                        8..10,
                                    ),
                                ),
                                8..10,
                            ),
                            (
                                Multiply(
                                    (
                                        Number(
                                            (
                                                2.0,
                                                13..14,
                                            ),
                                        ),
                                        13..14,
                                    ),
                                    (
                                        Number(
                                            (
                                                3.0,
                                                17..18,
                                            ),
                                        ),
                                        17..18,
                                    ),
                                ),
                                13..18,
                            ),
                        ),
                        8..18,
                    ),
                ),
                0..18,
            ),
        ),
        0..18,
    ),
]
