tests/grammar/snapshots/r#mod__grammar__alpha034__var_init.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"let a = 10\").unwrap()"
---
Statement(
    [
        VariableInit(
            "a",
            Number(
                10.0,
            ),
        ),
    ],
)
