tests/grammar/snapshots/r#mod__grammar__alpha034__var_set-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"a = 10 + 2\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                VariableSet(
                    Variable(
                        "a",
                    ),
                    (),
                    Add(
                        Number(
                            10.0,
                        ),
                        (),
                        Number(
                            2.0,
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
