tests/grammar/snapshots/r#mod__grammar__alpha034__var_set-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"a = 10 + 2 * 3\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                VariableSet(
                    Variable(
                        "a",
                    ),
                    (),
                    Add(
                        Number(
                            10.0,
                        ),
                        (),
                        Multiply(
                            Number(
                                2.0,
                            ),
                            (),
                            Number(
                                3.0,
                            ),
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
