tests/grammar/snapshots/r#mod__grammar__alpha034__variable_get-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"name_1\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Var(
                            (
                                "name_1",
                                0..6,
                            ),
                        ),
                        0..6,
                    ),
                ),
                0..6,
            ),
        ],
    ),
    0..6,
)
